Disable back, forward feature After evaluation, neither youtube TV nor netflix need these features

--- a/browser.html
+++ b/browser.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <link rel="stylesheet" href="browser.css">
-    <script src="browser_bindings.js"></script>
     <script src="browser.js"></script>
   </head>
   <body>
@@ -13,8 +12,9 @@
           <option>Youtube</option>
         </select>
         <button id="pin" title="Pin"></button>
-        <button id="back" title="Go Back"></button>
-        <button id="forward" title="Go Forward"></button>
+        <!-- don't delete -->
+        <!-- <button id="back" title="Go Back"></button>
+        <button id="forward" title="Go Forward"></button> -->
         <button id="reload" title="Reload"></button>
         <button id="minimize" title="Minimize"></button>
         <button id="close" title="Close window"></button>
