Add checkVersion function

--- a/browser.html
+++ b/browser.html
@@ -11,6 +11,7 @@
           <option>Netflix</option>
           <option>Youtube</option>
         </select>
+        <button id="updateNotify" title="Update notification"></button>
         <button id="pin" title="Pin"></button>
         <!-- don't delete -->
         <!-- <button id="back" title="Go Back"></button>
